force-app/main/default/objects/Form__c/fields/Form_Title__c.field-meta.xml
<CustomField>
    <fullName>Form_Title__c</fullName>
    <label>Form Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>