force-app/main/default/objects/Form__c/fields/Parent_Form__c.field-meta.xml
<CustomField>
    <fullName>Parent_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Form</label>
    <referenceTo>Form__c</referenceTo>
    <relationshipLabel>Child Forms</relationshipLabel>
    <relationshipName>Child_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>